<?xml version="1.0"?>
<package format="2">
  <name>pluginlib</name>
  <version>2.0.0</version>
  <description>
    The pluginlib package provides tools for writing and dynamically loading plugins using the ROS build infrastructure.
    To work, these tools require plugin providers to register their plugins in the package.xml of their package.
  </description>
  <maintainer email="esteve@osrfoundation.org">Esteve Fernandez</maintainer>
  <license>BSD</license>
  <license>Boost Software License</license>

  <url>http://www.ros.org/wiki/pluginlib</url>
  <author>Eitan Marder-Eppstein</author>
  <author>Tully Foote</author>
  <author>Dirk Thomas</author>
  <author>Mirza Shah</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_index_cpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>tinyxml</build_depend>

  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>tinyxml</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/test/test_plugins.xml"/>
  </export>
</package>
